// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendTransfer Network Selection should select a cryptoasset and select sender without wallet id param 1`] = `
<div>
  <div
    class="relative flex min-h-screen flex-col pb-32 sm:pb-0"
  >
    <div
      class="fixed bottom-0 left-0 z-10 flex w-full flex-col justify-center bg-white dark:bg-black sm:hidden"
      data-testid="NavigationBarMobile"
    >
      <div
        class="border-t border-theme-secondary-300 dark:border-theme-secondary-900"
        data-testid="NavigationBar__buttons-separator"
      />
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--receive"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                received.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                dashboard.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--send"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sent.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="css-1ovuwx0"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1v0i3m7"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-left-small.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-success-600 pl-0.5 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-success-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <div
                  class="absolute -top-4 -right-7 rounded-md border-2 border-white bg-theme-secondary-800 px-0.5 font-bold text-white dark:border-theme-secondary-900 css-85x3m0"
                >
                  BETA
                </div>
                <svg
                  height="28"
                >
                  payvo-logo.svg
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="mr-auto ml-4 hidden h-21 space-x-8 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="mr-auto ml-2 flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  type="button"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      menu.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--server-status"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-success-700"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-12xyeiw"
                    data-testid="NavigationBar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-12xyeiw"
                    data-testid="NavigationBar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="my-auto mx-4 hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="-mt-3 flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 py-2.5 px-8 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                data-testid="UserMenu"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="flex-1 css-ycib48"
      >
        <div
          class="mx-auto px-8 md:px-10 lg:container"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <section
                  data-testid="SendTransfer__form-step"
                >
                  <div
                    class="sm:mt-8"
                  >
                    <div
                      class="flex flex-col"
                    >
                      <span
                        class="css-3qwsx5"
                      >
                        Send DARK
                      </span>
                      <ul
                        class="css-xa5o6q"
                      >
                        <li
                          class="css-47028"
                        />
                        <li
                          class="css-47028"
                        />
                        <li
                          class="css-3ldhk3"
                        />
                        <li
                          class="css-3ldhk3"
                        />
                        <li
                          class="css-3ldhk3"
                        />
                      </ul>
                    </div>
                    <div
                      class="flex items-end justify-between bg-theme-background mt-6 hidden sm:block"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-2xl"
                          data-testid="header__title"
                        >
                          Send DARK
                        </h1>
                        <div
                          class="flex items-center text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Enter details below to send your transaction.
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="space-y-6 pt-6"
                  >
                    <fieldset
                      class="flex flex-col css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="network"
                      >
                        Cryptoasset
                      </label>
                      <div>
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-owns="SendTransfer__network-menu"
                          data-testid="SelectNetwork"
                          role="combobox"
                        >
                          <label
                            for="SendTransfer__network-input"
                            id="SendTransfer__network-label"
                          />
                          
                          <div
                            class="css-n29l73"
                            disabled=""
                          >
                            <div
                              aria-label="ARK Devnet"
                              class="border-theme-secondary-200 text-theme-secondary-500 dark:border-theme-secondary-800 ring-theme-background duration-100 css-459u9r"
                              data-testid="SelectNetworkInput__network"
                            >
                              <div
                                class="css-1i4b0eq"
                                data-testid="NetworkIcon__icon"
                                height="20"
                                width="20"
                              >
                                <svg>
                                  ark.svg
                                </svg>
                              </div>
                            </div>
                            <div
                              class="relative flex h-full flex-1"
                            >
                              <input
                                aria-autocomplete="list"
                                aria-controls="SendTransfer__network-menu"
                                aria-labelledby="SendTransfer__network-label"
                                autocomplete="off"
                                class="no-ligatures w-full border-none text-theme-secondary-text css-1nupw50"
                                data-testid="SelectNetworkInput__input"
                                disabled=""
                                id="SendTransfer__network-input"
                                placeholder="Enter a cryptoasset name"
                                type="text"
                                value="ARK Devnet"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="hidden"
                          data-testid="SelectNetwork__options"
                        >
                          <div
                            class="mt-6 hidden"
                          >
                            <div
                              class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
                            >
                              PUBLIC NETWORKS
                            </div>
                            <ul
                              aria-labelledby="SendTransfer__network-label"
                              class="css-6y29t8"
                              id="SendTransfer__network-menu"
                              role="listbox"
                            />
                          </div>
                          <div
                            class="mt-6"
                          >
                            <ul
                              aria-labelledby="SendTransfer__network-label"
                              class="css-6y29t8"
                              id="SendTransfer__network-menu"
                              role="listbox"
                            >
                              <li
                                class="relative flex h-0 cursor-pointer pb-[100%] cursor-not-allowed"
                                data-testid="SelectNetwork__NetworkIcon--container"
                              >
                                <div
                                  aria-label="ARK Devnet"
                                  class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-success-500 dark:border-theme-success-600 bg-theme-success-100 dark:bg-theme-success-900 text-theme-secondary-600 dark:text-theme-secondary-200"
                                  data-testid="NetworkIcon-ARK-ark.devnet"
                                >
                                  <div
                                    class="css-1i4b0eq"
                                    data-testid="NetworkIcon__icon"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      ark.svg
                                    </svg>
                                  </div>
                                </div>
                              </li>
                            </ul>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                    <fieldset
                      class="flex flex-col css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="senderAddress"
                      >
                        Sender
                      </label>
                      <div
                        data-testid="sender-address"
                      >
                        <button
                          class="relative w-full rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                          data-testid="SelectAddress__wrapper"
                          type="button"
                        >
                          <span
                            class="absolute inset-0 flex w-full items-center border border-transparent px-14"
                          >
                            <div
                              class="no-ligatures flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                            >
                              <span
                                class="font-semibold text-base text-theme-text"
                                data-testid="Address__alias"
                              >
                                <span
                                  class="css-u3jrna"
                                  data-testid="TruncateEnd"
                                >
                                  ARK Wallet 2
                                </span>
                              </span>
                              <span
                                class="min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                                data-testid="Address__address"
                              >
                                D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb
                              </span>
                            </div>
                          </span>
                          <div
                            class="css-1psxlcd"
                          >
                            <div
                              class="shrink-0 css-8zckym"
                              data-testid="Avatar"
                            >
                              <div
                                class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                              >
                                <img
                                  alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                                  title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                                />
                              </div>
                            </div>
                            <div
                              class="relative flex h-full flex-1 invisible"
                            >
                              <input
                                autocomplete="off"
                                class="no-ligatures w-full border-none css-1nupw50"
                                data-testid="SelectAddress__input"
                                name="senderAddress"
                                readonly=""
                                type="text"
                                value="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                              />
                            </div>
                            <div
                              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                              data-testid="Input__addon-end"
                            >
                              <div
                                class=""
                              >
                                <div
                                  class="flex items-center space-x-3 text-theme-primary-300 dark:text-theme-secondary-600"
                                >
                                  <div
                                    class="css-1i4b0eq"
                                    height="20"
                                    width="20"
                                  >
                                    <svg>
                                      user.svg
                                    </svg>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </button>
                      </div>
                    </fieldset>
                    <div
                      data-testid="recipient-address"
                    >
                      <div
                        class="css-qb57lz"
                      >
                        <div
                          class="mb-2 flex items-center justify-between text-theme-secondary-text hover:text-theme-primary-600"
                        >
                          <div
                            class="text-sm font-semibold transition-colors duration-100"
                          >
                            Recipient
                          </div>
                          <div
                            class="flex items-center space-x-2"
                          >
                            <span>
                              <div
                                class="flex items-center"
                              >
                                <span
                                  class="css-w6ofpw"
                                  role="button"
                                >
                                  Single
                                </span>
                                <label
                                  class="css-1uxo3sa"
                                >
                                  <input
                                    class="css-1r71f0z toggle-input"
                                    type="checkbox"
                                  />
                                  <div
                                    class="css-1f5xwvv toggle-handle"
                                  >
                                    <span
                                      class="css-19qsmxy"
                                    />
                                  </div>
                                </label>
                                <span
                                  class="css-iwfou6"
                                  role="button"
                                >
                                  Multiple
                                </span>
                              </div>
                            </span>
                            <div
                              class="questionmark flex h-5 w-5 cursor-pointer items-center justify-center rounded-full bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:bg-theme-secondary-800 dark:text-theme-secondary-200"
                            >
                              <div
                                class="css-15txs7d"
                                height="10"
                                width="10"
                              >
                                <svg>
                                  question-mark-small.svg
                                </svg>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="css-19wsyy"
                        >
                          <div
                            class="space-y-5"
                          >
                            <fieldset
                              class="flex flex-col css-1bcidjh"
                            >
                              <div>
                                <div
                                  class="relative flex w-full items-center text-left"
                                  data-testid="SelectRecipient__wrapper"
                                >
                                  <div
                                    class="relative w-full"
                                    data-testid="SelectDropdown"
                                  >
                                    <div
                                      class="sr-only css-1psxlcd"
                                    >
                                      <div
                                        class="relative flex h-full flex-1"
                                      >
                                        <input
                                          aria-invalid="false"
                                          autocomplete="off"
                                          class="no-ligatures w-full border-none css-1nupw50"
                                          data-testid="select-list__input"
                                          name="recipientAddress"
                                          readonly=""
                                          tabindex="-1"
                                          type="text"
                                          value=""
                                        />
                                      </div>
                                    </div>
                                    <div
                                      class="w-full"
                                    >
                                      <div
                                        aria-expanded="false"
                                        aria-haspopup="listbox"
                                        aria-owns="SelectRecipient__dropdown-menu"
                                        role="combobox"
                                      >
                                        <div>
                                          <label
                                            for="SelectRecipient__dropdown-input"
                                            id="SelectRecipient__dropdown-label"
                                          />
                                          <div
                                            class="css-1psxlcd"
                                          >
                                            <div
                                              class="flex items-center"
                                            >
                                              <div
                                                class="border-theme-secondary-200 bg-theme-secondary-200 dark:border-theme-secondary-700 dark:bg-theme-secondary-700 ring-theme-background duration-100 css-459u9r"
                                              />
                                            </div>
                                            <div
                                              class="relative flex h-full flex-1"
                                            >
                                              <input
                                                aria-autocomplete="list"
                                                aria-controls="SelectRecipient__dropdown-menu"
                                                aria-invalid="false"
                                                aria-labelledby="SelectRecipient__dropdown-label"
                                                autocomplete="off"
                                                class="no-ligatures w-full border-none cursor-default css-1nupw50"
                                                data-testid="SelectDropdown__input"
                                                id="SelectRecipient__dropdown-input"
                                                name="recipientAddress"
                                                placeholder="Address"
                                                type="text"
                                                value=""
                                              />
                                            </div>
                                            <div
                                              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                                              data-testid="Input__addon-end"
                                            >
                                              <div
                                                class=""
                                              >
                                                <div
                                                  class="flex items-center cursor-pointer"
                                                  data-testid="SelectRecipient__select-recipient"
                                                >
                                                  <div
                                                    class="css-1i4b0eq"
                                                    height="20"
                                                    width="20"
                                                  >
                                                    <svg>
                                                      user.svg
                                                    </svg>
                                                  </div>
                                                </div>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                        <div
                                          aria-labelledby="SelectRecipient__dropdown-label"
                                          id="SelectRecipient__dropdown-menu"
                                          role="listbox"
                                        />
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </fieldset>
                            <fieldset
                              class="flex flex-col css-1bcidjh"
                            >
                              <label
                                class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                                data-testid="FormLabel"
                                for="amount"
                              >
                                <span>
                                  Amount
                                </span>
                                <span
                                  class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
                                >
                                  (
                                  Available
                                   
                                  <span
                                    class="whitespace-nowrap"
                                    data-testid="Amount"
                                  >
                                    57.60679402
                                  </span>
                                  )
                                </span>
                              </label>
                              <div
                                class="flex space-x-2"
                              >
                                <div
                                  class="flex-1"
                                >
                                  <div
                                    class="relative"
                                  >
                                    <div
                                      class="css-1psxlcd"
                                    >
                                      <div
                                        class="relative flex h-full flex-1"
                                      >
                                        <input
                                          autocomplete="off"
                                          class="no-ligatures w-full border-none css-1nupw50"
                                          data-testid="AddRecipient__amount"
                                          name="amount"
                                          placeholder="Enter an amount"
                                          type="text"
                                          value=""
                                        />
                                      </div>
                                    </div>
                                  </div>
                                </div>
                                <div
                                  class="inline-flex"
                                >
                                  <button
                                    class=" css-g7dob4"
                                    data-testid="AddRecipient__send-all"
                                    type="button"
                                  >
                                    Send All
                                  </button>
                                </div>
                              </div>
                            </fieldset>
                          </div>
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="relative css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="memo"
                      >
                        Memo
                        <span
                          class="ml-1 text-theme-secondary-500 dark:text-theme-secondary-700"
                          data-testid="FormLabel__optional"
                        >
                          optional
                        </span>
                      </label>
                      <div
                        class="css-1psxlcd"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none css-1nupw50"
                            data-testid="Input__memo"
                            name="memo"
                            placeholder=" "
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <span
                              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                              data-testid="InputCounter__counter"
                            >
                              0
                              /
                              255
                            </span>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                    <fieldset
                      class="flex flex-col css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="fee"
                      >
                        Transaction Fee
                      </label>
                      <div
                        class="relative"
                        data-testid="InputFee"
                      >
                        <div
                          class="absolute right-0 -mt-7"
                        >
                          <div
                            class="flex items-center"
                          >
                            <span
                              class="css-w6ofpw"
                              role="button"
                            >
                              Simple
                            </span>
                            <label
                              class="css-1uxo3sa"
                            >
                              <input
                                class="css-1r71f0z toggle-input"
                                type="checkbox"
                              />
                              <div
                                class="css-1f5xwvv toggle-handle"
                              >
                                <span
                                  class="css-19qsmxy"
                                />
                              </div>
                            </label>
                            <span
                              class="css-iwfou6"
                              role="button"
                            >
                              Advanced
                            </span>
                          </div>
                        </div>
                        <div
                          class="inline-flex w-full items-center space-x-3"
                          data-testid="ButtonGroup"
                          role="radiogroup"
                        >
                          <button
                            aria-checked="false"
                            aria-label="0.00357"
                            class="css-17i051m"
                            data-testid="ButtonGroupOption"
                            role="radio"
                            type="button"
                          >
                            <div
                              class="flex flex-col space-y-2"
                            >
                              <div>
                                Slow
                              </div>
                              <span
                                class="whitespace-nowrap text-sm"
                                data-testid="Amount"
                              >
                                0.00357 DARK
                              </span>
                            </div>
                          </button>
                          <button
                            aria-checked="true"
                            aria-label="0.07320598"
                            class="css-17i051m"
                            data-testid="ButtonGroupOption"
                            role="radio"
                            type="button"
                          >
                            <div
                              class="flex flex-col space-y-2"
                            >
                              <div>
                                Average
                              </div>
                              <span
                                class="whitespace-nowrap text-sm"
                                data-testid="Amount"
                              >
                                0.07320598 DARK
                              </span>
                            </div>
                          </button>
                          <button
                            aria-checked="false"
                            aria-label="0.1"
                            class="css-17i051m"
                            data-testid="ButtonGroupOption"
                            role="radio"
                            type="button"
                          >
                            <div
                              class="flex flex-col space-y-2"
                            >
                              <div>
                                Fast
                              </div>
                              <span
                                class="whitespace-nowrap text-sm"
                                data-testid="Amount"
                              >
                                0.1 DARK
                              </span>
                            </div>
                          </button>
                        </div>
                      </div>
                    </fieldset>
                  </div>
                </section>
              </div>
              <div
                class="css-ppnppl"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="StepNavigation__back-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="css-1yqe28v"
                  data-testid="StepNavigation__continue-button"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Continue
                  </div>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SendTransfer Network Selection should select cryptoasset 1`] = `
<DocumentFragment>
  <div
    class="relative flex min-h-screen flex-col pb-32 sm:pb-0"
  >
    <div
      class="fixed bottom-0 left-0 z-10 flex w-full flex-col justify-center bg-white dark:bg-black sm:hidden"
      data-testid="NavigationBarMobile"
    >
      <div
        class="border-t border-theme-secondary-300 dark:border-theme-secondary-900"
        data-testid="NavigationBar__buttons-separator"
      />
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--receive"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                received.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                dashboard.svg
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-llgfp0"
          type="vertical"
        />
        <button
          class="text-theme-secondary-700 dark:text-theme-secondary-600 css-12xyeiw"
          data-testid="NavigationBar__buttons__mobile--send"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg>
                sent.svg
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="css-1ovuwx0"
    >
      <div
        class="relative flex h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1v0i3m7"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg>
                chevron-left-small.svg
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-4 flex h-11 w-11 cursor-pointer items-center justify-center rounded-xl bg-theme-success-600 pl-0.5 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-success-400"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <div
                  class="absolute -top-4 -right-7 rounded-md border-2 border-white bg-theme-secondary-800 px-0.5 font-bold text-white dark:border-theme-secondary-900 css-85x3m0"
                >
                  BETA
                </div>
                <svg
                  height="28"
                >
                  payvo-logo.svg
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="mr-auto ml-4 hidden h-21 space-x-8 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/news"
                title="News"
              >
                News
              </a>
            </li>
          </ul>
          <div
            class="mr-auto ml-2 flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              class="static sm:relative"
            >
              <span
                data-testid="dropdown__toggle"
              >
                <button
                  class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                  type="button"
                >
                  <div
                    class="css-1i4b0eq"
                    height="20"
                    width="20"
                  >
                    <svg>
                      menu.svg
                    </svg>
                  </div>
                </button>
              </span>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--server-status"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-success-700"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                class="static sm:relative"
              >
                <span
                  data-testid="dropdown__toggle"
                >
                  <div
                    class="group css-1ietn6u"
                  >
                    <button
                      class="css-12xyeiw"
                      data-testid="NavigationBar__buttons--notifications"
                      type="button"
                    >
                      <div
                        class="flex items-center space-x-2"
                      >
                        <div
                          class="p-1 css-1i4b0eq"
                          height="20"
                          width="20"
                        >
                          <svg>
                            bell.svg
                          </svg>
                        </div>
                        <div
                          class="absolute top-1 right-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                        >
                          <div
                            class="h-2 w-2 rounded-full bg-theme-danger-500"
                          />
                        </div>
                      </div>
                    </button>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-12xyeiw"
                    data-testid="NavigationBar__buttons--receive"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          received.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-1ietn6u"
                >
                  <button
                    class="css-12xyeiw"
                    data-testid="NavigationBar__buttons--send"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg>
                          sent.svg
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="my-auto mx-4 hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="-mt-3 flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 py-2.5 px-8 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            class="static sm:relative"
          >
            <span
              data-testid="dropdown__toggle"
            >
              <div
                class="relative cursor-pointer items-center justify-center rounded-full align-middle"
                data-testid="UserMenu"
              >
                <div
                  class="shrink-0 css-8d0u1i"
                  data-testid="Avatar"
                >
                  <div
                    class="inline-flex h-full w-full items-center justify-center overflow-hidden rounded-full align-middle"
                  >
                    <img
                      alt="Profile Avatar"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    />
                    <span
                      class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                    >
                      JO
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="flex-1 css-ycib48"
      >
        <div
          class="mx-auto px-8 md:px-10 lg:container"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="Form"
          >
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <section
                  class="space-y-6"
                  data-testid="SendTransfer__network-step"
                >
                  <div
                    class="sm:mt-8"
                  >
                    <div
                      class="flex flex-col"
                    >
                      <span
                        class="css-3qwsx5"
                      >
                        Select a Cryptoasset
                      </span>
                      <ul
                        class="css-xa5o6q"
                      >
                        <li
                          class="css-47028"
                        />
                        <li
                          class="css-3ldhk3"
                        />
                        <li
                          class="css-3ldhk3"
                        />
                        <li
                          class="css-3ldhk3"
                        />
                        <li
                          class="css-3ldhk3"
                        />
                      </ul>
                    </div>
                    <div
                      class="flex items-end justify-between bg-theme-background mt-6 hidden sm:block"
                    >
                      <div
                        class="space-y-4"
                      >
                        <h1
                          class="mb-0 text-2xl"
                          data-testid="header__title"
                        >
                          Select a Cryptoasset
                        </h1>
                        <div
                          class="flex items-center text-theme-secondary-text"
                          data-testid="header__subtitle"
                        >
                          Select a cryptoasset to send funds from.
                        </div>
                      </div>
                    </div>
                  </div>
                  <fieldset
                    class="flex flex-col css-1bcidjh"
                  >
                    <label
                      class="FormLabel mb-2 flex text-sm font-semibold text-theme-secondary-text transition-colors duration-100"
                      data-testid="FormLabel"
                      for="network"
                    >
                      Cryptoasset
                    </label>
                    <div>
                      <div
                        aria-expanded="true"
                        aria-haspopup="listbox"
                        aria-owns="SendTransfer__network-step__select-menu"
                        data-testid="SelectNetwork"
                        role="combobox"
                      >
                        <label
                          for="SendTransfer__network-step__select-input"
                          id="SendTransfer__network-step__select-label"
                        />
                        <div
                          class="css-1psxlcd"
                        >
                          <div
                            aria-label="ARK Devnet"
                            class="border-theme-secondary-200 text-theme-secondary-500 dark:border-theme-secondary-800 ring-theme-background duration-100 css-459u9r"
                            data-testid="SelectNetworkInput__network"
                          >
                            <div
                              class="css-1i4b0eq"
                              data-testid="NetworkIcon__icon"
                              height="20"
                              width="20"
                            >
                              <svg>
                                ark.svg
                              </svg>
                            </div>
                          </div>
                          <div
                            class="relative flex h-full flex-1"
                          >
                            <input
                              aria-autocomplete="list"
                              aria-controls="SendTransfer__network-step__select-menu"
                              aria-labelledby="SendTransfer__network-step__select-label"
                              autocomplete="off"
                              class="no-ligatures w-full border-none css-1nupw50"
                              data-testid="SelectNetworkInput__input"
                              id="SendTransfer__network-step__select-input"
                              placeholder="Enter a cryptoasset name"
                              type="text"
                              value="ARK Devnet"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        class=""
                        data-testid="SelectNetwork__options"
                      >
                        <div
                          class="mt-6 hidden"
                        >
                          <div
                            class="text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
                          >
                            PUBLIC NETWORKS
                          </div>
                          <ul
                            aria-labelledby="SendTransfer__network-step__select-label"
                            class="css-6y29t8"
                            id="SendTransfer__network-step__select-menu"
                            role="listbox"
                          />
                        </div>
                        <div
                          class="mt-6"
                        >
                          <ul
                            aria-labelledby="SendTransfer__network-step__select-label"
                            class="css-6y29t8"
                            id="SendTransfer__network-step__select-menu"
                            role="listbox"
                          >
                            <li
                              class="relative flex h-0 cursor-pointer pb-[100%]"
                              data-testid="SelectNetwork__NetworkIcon--container"
                            >
                              <div
                                aria-label="ARK Devnet"
                                class="absolute inset-0 flex items-center justify-center rounded-xl border-2 border-theme-success-500 dark:border-theme-success-600 bg-theme-success-100 dark:bg-theme-success-900 text-theme-secondary-600 dark:text-theme-secondary-200"
                                data-testid="NetworkIcon-ARK-ark.devnet"
                              >
                                <div
                                  class="css-1i4b0eq"
                                  data-testid="NetworkIcon__icon"
                                  height="20"
                                  width="20"
                                >
                                  <svg>
                                    ark.svg
                                  </svg>
                                </div>
                              </div>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </section>
              </div>
              <div
                class="css-ppnppl"
              >
                <button
                  class="css-1jhy6v9"
                  data-testid="StepNavigation__back-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="css-1bx0hyc"
                  data-testid="StepNavigation__continue-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Continue
                  </div>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
